--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,8 @@
   "name": "Cookie Vault",
   "version": "1.0.0",
   "description": "Modern, secure cookie backup and restoration tool.",
-  "permissions": [
-    "cookies",
-    "downloads",
-    "storage"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "permissions": ["cookies", "downloads", "storage"],
+  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "index.html",
     "default_title": "Cookie Vault"
