--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "temp_init",
+  "name": "cookie-vault",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write .",
     "preview": "vite preview",
     "test": "vitest"
   },
@@ -39,6 +40,7 @@
     "globals": "^16.5.0",
     "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
