--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@types/zxcvbn": "^4.4.5",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
@@ -19,7 +20,8 @@
     "react-dom": "^19.2.0",
     "sjcl": "^1.0.8",
     "tailwind-merge": "^3.4.0",
-    "webextension-polyfill": "^0.12.0"
+    "webextension-polyfill": "^0.12.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.33",
