feat: FMHY acceptance + Apple HIG integration
FMHY Roadmap Implementation:
- Add Netscape HTTP Cookie File export (yt-dlp/wget/curl)
- Add JDownloader JSON export with clipboard support
- Add partitioned cookies (CHIPS) support
- Refactor to activeTab permission model (zero standing privileges)
- Add GitHub Actions reproducible build workflow
- Create PRIVACY.md and SECURITY.md documentation

Apple HIG Integration:
- Create docs/DESIGN_SYSTEM.md with comprehensive guidelines
- Add HIG design rules to AGENTS.md
- Add reduced motion support (prefers-reduced-motion)
- Add touch target utility classes (44px/28px)
- Add focus-visible styles for keyboard navigation

Tests: 49 passing (25 new for export utilities)

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
   "manifest_version": 3,
   "name": "Cookie Vault",
-  "version": "1.0.0",
-  "description": "Modern, secure cookie backup and restoration tool.",
-  "permissions": ["cookies", "downloads", "storage"],
-  "host_permissions": ["<all_urls>"],
+  "version": "1.1.0",
+  "description": "Secure cookie backup, restore, and export for yt-dlp, wget, curl, and JDownloader.",
+  "permissions": [
+    "cookies",
+    "downloads",
+    "storage",
+    "activeTab"
+  ],
+  "host_permissions": [],
+  "offline_enabled": true,
   "action": {
     "default_popup": "index.html",
     "default_title": "Cookie Vault"
