--- a/manifest.json
+++ b/manifest.json
@@ -16,8 +16,8 @@
     "default_title": "Cookie Vault"
   },
   "icons": {
-    "16": "public/vite.svg",
-    "48": "public/vite.svg",
-    "128": "public/vite.svg"
+    "16": "public/icons/icon-16.png",
+    "48": "public/icons/icon-48.png",
+    "128": "public/icons/icon-128.png"
   }
 }
